# Liprofy

./: CMakeLists.txt  README.md
docs/: Doxyfile
docs/html/: index.html
docs/latex/: refman.tex
include/: Lista.h  Lista_Playlist.h  Musica.h  Musica2.h  No.h  Playlist.h  Playlist2.h  knot.h  list.h  lista.h  music.h
novo/: Lista.h  Menu.cpp  Musica.h
src/: Lista.cpp  Lista_Playlist.cpp  Menu.cpp  Musica.cpp  No.cpp  Playlist.cpp  Playlist2.cpp  antigomenu.cpp  chat.cpp  knot.cpp  list.cpp  lista.cpp  main.cpp  menu.cpp
